ChangeLog for the Astro project.

20200803:
	* add callback stuff to the nice devices
	* add callback stuff to more ice interfaces

20200802:
	* add callbacks to filterwheel
	* add pause and resume to the heartbeat interface
	* add interval callback to the heartbeat interface
	* add pause/resume commands to the snowheartbeat program

20200801:
	* add callback to the ccd device
	* add callback to CcdI servant interface and implementation

20200731:
	* add processSize method to Daemon interface
	* fix possible seg faults in CommunicatorSingleton

20200717:
	* add implementation of Size(std::string) constructor
	* implement Angle(std::string) constructor
	* improve MilkyWay parser
	* add more operator<< for angle types
	* fix rounding of seconds in HMS/DMS display

20200716:
	* add GridCalculator class and gridcalculator utility

20200713:
	* add perturbation series for planets

20200710:
	* add time option to astrotime utility

20200214:
	* add --enable-nonroot option to configure script
	* refactor the Cooler class, moving the state variables to the top
	  class
	* add a monitoring thread to the SX cooler driver

20200206:
	* add a build script

20200205:
	* fix some minor bugs in the guideport callback stuff

20200204:
	* add callback stuff to the Guideport class
	* introduce GuidePortActivation class to simplify interface
	* add callback stuff to the Guideport interface in slice
	* add callback stuff to the GuidePortI servant
	* add snowguideport client with monitoring capability

20200203:
	* remove #include <filesystem> again, wait until c++17 becomes
	  more widespread

20200202:
	* add callback stuff to the Mount class
	* refactor the simulator mount to work with callbacks
	* add callbacks to the MountI
	* add monitoring to the snowmount client

20200201:
	* add statistics command to snowdaemon
	* add call statistics to all server side interfaces
	* fix some warnings in snowguide.cpp
	* fix statistics to compile